# Pomotimer

./: Cargo.nix  Cargo.toml  flake.nix  package.json  result-bin
cli/: .gitignore  Cargo.toml  LICENSE  README.md
cli/src/: networking.rs  run.rs  structs.rs
docs/: book.toml  index.html  something
docs/src/: SUMMARY.md  activities.md  rest.md  study.md
nix/: cli.nix
src/: App.jsx  host.rs  main.jsx  main.rs  run.rs  structs.rs
src-tauri/: Cargo.toml
src-tauri/src/: events.rs  helpers.rs  lib.rs  networking.rs  timer.rs
src/bindings-js-files/: index.js  pomotimer_lib.js
src/bindings-js-files/pomotimer_lib/: discord.js
