[package]
name = "pomotimer"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
directories = "6.0.0"
humantime = "2.3.0"
notify-rust = "4.17.0"
rodio = "0.22.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
