[package]
name = "pomotimer"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
directories = "6.0.0"
discord-rich-presence = "1.1.0"
humantime = "2.3.0"
iroh = "0.98.2"
notify-rust = "4.17.0"
rodio = "0.22.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
